<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/saveButton"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="278dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:text="@string/Save"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.418"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975"
        app:strokeColor="@color/black" />

    <EditText
        android:id="@+id/titleText"
        android:layout_width="366dp"
        android:layout_height="50dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Title"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/isbnText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/isbnText"
        android:layout_width="366dp"
        android:layout_height="50dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/ISBN"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/authorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/authorText"
        android:layout_width="366dp"
        android:layout_height="50dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Author"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/languageText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/isbnText" />

    <EditText
        android:id="@+id/languageText"
        android:layout_width="366dp"
        android:layout_height="50dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Language"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/genreText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authorText"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/genreText"
        android:layout_width="366dp"
        android:layout_height="50dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Genre"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/editorialText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/languageText" />

    <EditText
        android:id="@+id/editorialText"
        android:layout_width="366dp"
        android:layout_height="50dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/editorial"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/pbl_dateText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genreText"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/pbl_dateText"
        android:layout_width="366dp"
        android:layout_height="50dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Pbl_date"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/synopsisText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editorialText" />
    <EditText
        android:id="@+id/synopsisText"
        android:layout_width="366dp"
        android:layout_height="120dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="23dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Synopsis"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pbl_dateText" />


</androidx.constraintlayout.widget.ConstraintLayout>