<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/saveButton"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="278dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:text="@string/SaveChanges"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.418"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975"
        app:strokeColor="@color/black" />

    <EditText
        android:id="@+id/titleTextEdit"
        android:layout_width="366dp"
        android:layout_height="50dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Title"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/isbnTextEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/isbnTextEdit"
        android:layout_width="366dp"
        android:layout_height="50dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/ISBN"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/authorTextEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextEdit"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/authorTextEdit"
        android:layout_width="366dp"
        android:layout_height="50dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Author"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/languageTextEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/isbnTextEdit" />

    <EditText
        android:id="@+id/languageTextEdit"
        android:layout_width="366dp"
        android:layout_height="50dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Language"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/genreTextEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authorTextEdit"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/genreTextEdit"
        android:layout_width="366dp"
        android:layout_height="50dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Genre"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/editorialTextEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/languageTextEdit" />

    <EditText
        android:id="@+id/editorialTextEdit"
        android:layout_width="366dp"
        android:layout_height="50dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/editorial"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/pbl_dateTextEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genreTextEdit"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/pbl_dateTextEdit"
        android:layout_width="366dp"
        android:layout_height="50dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Pbl_date"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/synopsisTextEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editorialTextEdit"
        tools:ignore="TextContrastCheck" />
    <EditText
        android:id="@+id/synopsisTextEdit"
        android:layout_width="366dp"
        android:layout_height="120dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="23dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Synopsis"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pbl_dateTextEdit" />
</androidx.constraintlayout.widget.ConstraintLayout>