<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/saveButton2"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="277dp"
        android:layout_height="55dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="10dp"
        android:text="@string/SaveChanges"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.912"
        app:strokeColor="@color/black" />

    <EditText
        android:id="@+id/nameTextEdit"
        android:layout_width="366dp"
        android:layout_height="50dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/surname1TextEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/surname1TextEdit"
        android:layout_width="366dp"
        android:layout_height="50dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/First_Surname"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/surname2TextEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextEdit"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/surname2TextEdit"
        android:layout_width="366dp"
        android:layout_height="50dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Second_Surname"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/dniTextEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surname1TextEdit"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/dniTextEdit"
        android:layout_width="366dp"
        android:layout_height="50dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/DNI"
        android:inputType="text"
        android:maxLength="9"
        app:layout_constraintBottom_toTopOf="@+id/phoneNumTextEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surname2TextEdit" />

    <EditText
        android:id="@+id/phoneNumTextEdit"
        android:layout_width="366dp"
        android:layout_height="50dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Phone_Number"
        android:inputType="phone"
        android:maxLength="9"
        app:layout_constraintBottom_toTopOf="@+id/emailTextEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dniTextEdit" />

    <EditText
        android:id="@+id/emailTextEdit"
        android:layout_width="366dp"
        android:layout_height="50dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="150dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumTextEdit"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>