<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleTextPreview"
        android:layout_width="366dp"
        android:layout_height="50dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Title"
        android:padding="10dp"
        android:textColorHint="#8D6E63"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/isbnTextPreview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnknownIdInLayout" />

    <TextView
        android:id="@+id/isbnTextPreview"
        android:layout_width="366dp"
        android:layout_height="50dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/ISBN"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/authorTextPreview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextPreview"
        tools:ignore="TextContrastCheck"
        android:textSize="20sp"
        android:textStyle="normal"/>

    <TextView
        android:id="@+id/authorTextPreview"
        android:layout_width="366dp"
        android:layout_height="50dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"
        android:padding="10dp"
        android:hint="@string/Author"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        app:layout_constraintBottom_toTopOf="@+id/languageTextPreview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/isbnTextPreview"
        android:textSize="20sp"
        android:textStyle="normal"/>

    <TextView
        android:id="@+id/languageTextPreview"
        android:layout_width="366dp"
        android:layout_height="50dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Language"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/genreTextPreview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authorTextPreview"
        tools:ignore="TextContrastCheck"
        android:textSize="20sp"
        android:textStyle="normal"/>

    <TextView
        android:id="@+id/genreTextPreview"
        android:layout_width="366dp"
        android:layout_height="50dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Genre"
        android:padding="10dp"
        android:textColorHint="#8D6E63"
        app:layout_constraintBottom_toTopOf="@+id/editorialTextPreview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/languageTextPreview"
        android:textSize="20sp"
        android:textStyle="normal"/>

    <TextView
        android:id="@+id/editorialTextPreview"
        android:layout_width="366dp"
        android:layout_height="50dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/editorial"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/pbl_dateTextPreview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genreTextPreview"
        tools:ignore="TextContrastCheck"
        android:textSize="20sp"
        android:textStyle="normal"/>

    <TextView
        android:id="@+id/pbl_dateTextPreview"
        android:layout_width="366dp"
        android:layout_height="50dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Pbl_date"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/synopsisTextPreview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editorialTextPreview"
        tools:ignore="TextContrastCheck"
        android:textSize="20sp"
        android:textStyle="normal"/>

    <TextView
        android:id="@+id/synopsisTextPreview"
        android:layout_width="366dp"
        android:layout_height="120dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Synopsis"
        android:padding="10dp"
        android:textColorHint="#8D6E63"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pbl_dateTextPreview"
        tools:ignore="UnknownIdInLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>